# triangle_finder

./: CMakeLists.txt  README.md  main.cpp  opencv.pri  resources.qrc  triangle_finder.pro
custom_widget/: dropenabledgraphicsview.cpp  dropenabledgraphicsview.h  sidebysideviewer.cpp  sidebysideviewer.h  stepwindow.cpp  stepwindow.h
main_window/: mainwindow.cpp  mainwindow.h
triangle_finder_adapter/: trianglefinderadapter.cpp  trianglefinderadapter.h
triangle_finder_model/: trianglefindermodel.cpp  trianglefindermodel.h  triangleinfocontainer.h
ui/: mainwindow.ui  stepwindow.ui
